--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
         <div class="card">
           <img src="images/Photos/Morder pyschology.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Modern Psychology</h5>
+            <h6 class="card-text">Designation</h6>
+            <button class="buy-course">Buy course</button>
           </div>
           <div class="card-footer">
             <small class="text-muted">Last updated 3 mins ago</small>
@@ -107,8 +108,9 @@
         <div class="card">
           <img src="images/Photos/Morder psyc.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h5 class="card-title">Modern Psychology</h5>
+            <h6 class="card-text">Designation</h6>
+            <button class="buy-course">Buy course</button>
           </div>
           <div class="card-footer">
             <small class="text-muted">Last updated 3 mins ago</small>
@@ -117,8 +119,9 @@
         <div class="card">
           <img src="images/Photos/Morder pychons.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <h5 class="card-title">Modern Psychology</h5>
+            <h6 class="card-text">Designation</h6>
+            <button class="buy-course">Buy course</button>
           </div>
           <div class="card-footer">
             <small class="text-muted">Last updated 3 mins ago</small>
@@ -128,9 +131,23 @@
 </div>
 
 
+<div class="container">
+    <h2 class="testmonail">Testimonail</h2>
+    <div class="row d-flex align-items-center">
+     <div>
+         <img class="man" src="images/Photos/Man.png" alt="">
+     </div>
+     <div class="col-md-6">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam vel id in totam, ab commodi aperiam, suscipit vero quae explicabo minima dolores pariatur voluptate quisquam, porro rem beatae! Vitae ipsum ad eligendi cumque obcaecati blanditiis, libero excepturi corporis et voluptas, unde illum porro dolor nesciunt autem nihil dicta? Obcaecati, debitis.</p>
+     </div>
+    </div>
+</div>
 
 
+<footer>
 
+    
+</footer>
 
 
 
