--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <div class="bg-color">
        <div class="container">
-        <nav class="navbar navbar-expand-lg ">
+        <nav class="navbar navbar-expand-lg navbar-light ">
             <a class="navbar-brand" href="#"><img class="logo" src="images/ICON/Logo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -29,9 +29,9 @@
                 <li class="nav-item">
                     <a class="nav-link text-body" href="#">Blog</a>
                   </li>
-                <li class="nav-item">
-                  <a class="nav-link sing-in" href="#">Sing in</a>
-                </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="#"><button class="sing-in">Sing in</button></a>
+                  </li>
               </ul>
             </div>
           </nav>
@@ -156,5 +156,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
 </body>
 </html>
