add hover button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link text-body" href="#">Blog</a>
                   </li>
                   <li class="nav-item sing-in ">
-                    <a class="nav-link sing-in text-white " href="#">Sing in</a>
+                    <a class="nav-link text-white " href="#">Sing in</a>
                   </li>
               </ul>
             </div>
