--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <div class="row">
     <div class="col-md-3 col-sm-6">
-        <div class="box text-center icon1">
+        <div class="icon-box text-center icon1">
             <div class="image-box icon-img">
                 <img class="icon" src="images/ICON/book.png" alt="">
             </div>
@@ -68,7 +68,7 @@
         </div>
     </div>
     <div class="col-md-3 col-sm-6">
-        <div class="box text-center activ icon2">
+        <div class="icon-box text-center activ icon2">
             <div class="image-box icon-img ">
                 <img class="icon" src="images/ICON/Student.png" alt="">
             </div>
@@ -79,7 +79,7 @@
         </div>
     </div>
     <div class="col-md-3 col-sm-6">
-        <div class="box text-center icon3">
+        <div class="icon-box text-center icon3">
             <div class="image-box icon-img">
                 <img class="icon" src="images/ICON/Test.png" alt="">
             </div>
@@ -90,7 +90,7 @@
         </div>
     </div>
     <div class="col-md-3 col-sm-6">
-        <div class="box text-center icon4">
+        <div class="icon-box text-center icon4">
             <div class="image-box icon-img">
                 <img class="icon" src="images/ICON/Students.png" alt="">
             </div>
